--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,14 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    //paging
+    implementation 'androidx.paging:paging-runtime:2.1.2'
+
     //image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     // Room components
     def roomVersion = '2.2.6'
