--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hacigo_MobileApp">
-        <activity android:name=".ui._parenthood.ParenthoodActivity"></activity>
+        <activity android:name=".ui._kiddojournal.CreateJournalActivity"></activity>
+        <activity android:name=".ui._parenthood.ParenthoodActivity" />
         <activity android:name=".ui._kiddojournal.KiddoJournalActivity" />
         <activity android:name=".ui._fooddetect.FoodDetectActivity" />
         <activity
