--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     //paging
     implementation 'androidx.paging:paging-runtime:2.1.2'
 
+    //easy permission
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
     //image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
