--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".ui._kiddojournal.CreateJournalActivity" />
         <activity android:name=".ui._parenthood.ParenthoodActivity" />
         <activity android:name=".ui._kiddojournal.KiddoJournalActivity" />
-        <activity android:name=".ui._fooddetect.FoodDetectActivity" />
+        <activity android:name=".ui._fooddetect.Result_RecipeNut" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
