--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui._kiddojournal.CreateJournalActivity" />
-        <activity android:name=".ui._parenthood.ParenthoodActivity" />
+        <activity android:name=".ui._parenthood.ArticleActivity" />
         <activity android:name=".ui._kiddojournal.KiddoJournalActivity" />
         <activity android:name=".ui._fooddetect.Result_RecipeNut" />
         <activity
