--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hacigo_MobileApp">
-        <activity android:name=".ui.MainJournalActivity"></activity>
+        <activity android:name=".ui.knowledgebase.KnowledgebaseDetailActivity"></activity>
+        <activity android:name=".ui.knowledgebase.KnowledgebaseActivity" />
+        <activity android:name=".ui.MainJournalActivity" />
         <activity android:name=".ui.dummy_develop.DummyDevelopActivity" />
         <activity android:name=".intro.IntroSlideActivity" />
         <activity android:name=".ui.recipes.RecipesDetailActivity" />
