--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hacigo_MobileApp">
 
-        <activity android:name=".ui.knowledgebase.KnowledgebaseDetailActivity"></activity>
+        <activity android:name=".ui.knowledgebase.KnowledgebaseDetailActivity"/>
         <activity android:name=".ui.knowledgebase.KnowledgebaseActivity" />
         <activity android:name=".ui.MainJournalActivity" />
         <activity android:name=".ui.dummy_develop.VerificationPursueActivity"/>
