--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hacigo_MobileApp">
         <activity
-            android:name=".ui._asijournal_FS.ASIJournalActivity"
+            android:name=".ui._asijournal_FS.AsiJournalFSActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui._asijournal_FS.ASIJournalFSActivity"
+            android:exported="true" />
         <activity android:name=".ui.account.EditProfileActivity" />
         <activity
             android:name=".ui.validation.ValidationActivity"
             android:exported="true" />
-        <activity android:name=".ui._asijournal.AsiJournalActivity" />
+        <activity
+            android:name=".ui._asijournal.AsiJournalActivity"
+            android:exported="true" />
         <activity android:name=".ui.knowledgebase.KnowledgebaseDetailActivity" />
         <activity android:name=".ui.knowledgebase.KnowledgebaseActivity" />
         <activity android:name=".ui.MainJournalActivity" />
