--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hacigo_MobileApp">
+        <receiver
+            android:name=".data.local.notification.NotificationReceiver"
+            android:enabled="true"
+            android:exported="true"/>
+        
         <activity
             android:name=".ui._imunisasijournal.ImunisasiJournalViewModel"
             android:exported="false" />
