Progress in making Nutrisi Ibu Hamil

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mellagusty.hacigo_mobileapp">
+    package="com.mellagusty.hacigo_mobileapp" >
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -14,12 +14,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hacigo_MobileApp">
+        android:theme="@style/Theme.Hacigo_MobileApp" >
+        <activity
+            android:name=".ui.nutrisi_ibu.NutrisiHamilDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.nutrisi_ibu.NutrisiHamilActivity"
+            android:exported="false" />
+
         <receiver
             android:name=".data.local.notification.NotificationReceiver"
             android:enabled="true"
-            android:exported="true"/>
-        
+            android:exported="true" />
+
         <activity
             android:name=".ui._imunisasijournal.ImunisasiJournalViewModel"
             android:exported="false" />
